<resources>
    <string name="app_name">1200134_nsralla_hassan_finalProject</string>
    <string name="gender_prompt">Select your gender</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_home_layout">Home_layout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slide show</string>
    <string name="menu_Pizza_menu">Pizza menu</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_favorites">Your favorites</string>
    <string name="menu_special_offers">Special Offers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">Call us or Find us</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_layout_admin">Home_layout_admin</string>
    <string name="description">Nestled in the heart of the bustling city,
        "The Gourmet Haven" offers a culinary retreat with its charming blend of modern elegance
        and rustic nostalgia. The restaurants
        interior boasts an open kitchen, allowing diners to observe
        the artistry of the chefs as they prepare meals with meticulous care.
        Soft, ambient lighting complements the warm, earthy tones of the décor,
        creating a cozy yet sophisticated atmosphere.</string>
</resources>