<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/home"-->
<!--            android:title="@string/menu_home" />-->

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="Home" />

        <item
            android:id="@+id/nav_pizza_menu"
            android:icon="@drawable/menu"
            android:title="Pizza Menu" />

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/menu_orders" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favortie_order"
            android:title="@string/menu_favorites" />



        <item
            android:id="@+id/nav_special_offers"
            android:icon="@drawable/gift"
            android:title="@string/menu_special_offers" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />



    </group>
</menu>